--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
 Package: data.table
-Type: Package
-Title: Extension of data.frame. i and j expressions, keys and binary search.
-Version: 1.2
-Date: 2008-08-19
-Author: Matthew Dowle
-Maintainer: Matthew Dowle <mdowle@mdowle.plus.com>
-Depends: R (>= 2.4.0), ref
-Description: Like a data.frame but i and j may be expressions evaluated within the frame. i is then like base::with and j like select in base::subset. When i is itself a data.table, a join is invoked similar to base::merge but uses binary search on the sorted key.
+Version: 1.4.1
+Title: Extension of data.frame for fast subset, fast merge and fast
+        grouping.
+Author: Matthew Dowle with many contributions from Tom Short.  See SVN
+        logs on R-Forge.
+Maintainer: Developers <datatable-help@lists.r-forge.r-project.org>
+Depends: R (>= 2.6.2)
+Description: Enhanced data.frame. Fast subset, grouping and merge in a
+        short and flexible syntax. i and j may be expressions of column
+        names directly, for faster development.  Example:
+        data[a>3,sum(b*c),by=d] where data has 4 columns (a,b,c,d).
 License: GPL
-Packaged: Sun Aug 31 15:23:47 2008; mdowle
+URL: http://datatable.r-forge.r-project.org/
+Packaged: 2010-05-03 00:03:11 UTC; home
+Repository: CRAN
+Date/Publication: 2010-05-03 08:40:44
