--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,10 @@ export(as.data.table,is.data.table,test.data.table,last,like,"%like%",between,"%
 export(timetaken)
 
 S3method("[", data.table)
+S3method("[<-", data.table)
+# S3method("[[", data.table)
+# S3method("[[<-", data.table)
+S3method("$<-", data.table)
 S3method(print, data.table)
 S3method(as.data.table, data.table)
 S3method(as.data.table, data.frame)
@@ -16,15 +20,11 @@ S3method(rbind, data.table)
 S3method(dim, data.table)
 S3method(dimnames, data.table)
 S3method("dimnames<-", data.table)
-S3method("$<-", data.table)
-S3method("[<-", data.table)
 S3method(duplicated, data.table)
 S3method(unique, data.table)
 S3method(merge, data.table)
 S3method(transform, data.table)
 S3method(within, data.table)
-S3method(subset, data.table)
-S3method(t, data.table)
 S3method(is.na, data.table)
 S3method(format, data.table)
 S3method(Ops, data.table)
@@ -34,6 +34,40 @@ S3method(tail, data.table)
 S3method(head, data.table)
 import(stats)
 S3method(na.omit, data.table)
+
+# IDateTime support:
+export(as.IDate,as.ITime,IDateTime)
+export(hour,yday,wday,mday,week,month,quarter,year)
+
+export(as.chron.IDate,as.chron.ITime)
+
+S3method("[", ITime)
+S3method(as.character, ITime)
+## S3method(as.chron, IDate)
+## S3method(as.chron, ITime)
+S3method(as.Date, IDate)
+S3method(as.IDate, Date)
+S3method(as.IDate, default)
+S3method(as.ITime, character)
+S3method(as.ITime, default)
+S3method(as.ITime, POSIXlt)
+S3method(as.ITime, times)
+S3method(as.list, IDate)
+S3method(as.POSIXct, IDate)
+S3method(as.POSIXct, ITime)
+S3method(as.POSIXlt, ITime)
+S3method(c, IDate)
+S3method(cut, IDate)
+S3method(format, ITime)
+S3method(IDateTime, default)
+S3method(mean, IDate)
+S3method(print, ITime)
+S3method(rep, IDate)
+S3method(rep, ITime)
+S3method(round, IDate)
+S3method(seq, IDate)
+S3method(split, IDate)
+
 
 # [.factor
 # c.factor
