--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: data.table
-Version: 1.5.1
+Version: 1.5.2
 Title: Extension of data.frame for fast subset, fast merge and fast
         grouping.
 Author: Matthew Dowle with many contributions from Tom Short.  See SVN
@@ -14,6 +14,8 @@ Description: Enhanced data.frame. Fast subset, grouping and merge in a
         fast join for large data.
 License: GPL
 URL: http://datatable.r-forge.r-project.org/
-Packaged: 2011-01-07 01:07:22 UTC; mdowle
 Repository: CRAN
-Date/Publication: 2011-01-08 08:31:24
+Repository/R-Forge/Project: datatable
+Repository/R-Forge/Revision: 174
+Date/Publication: 2011-01-21 09:03:34
+Packaged: 2011-01-19 21:47:47 UTC; rforge
