--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: data.table
-Version: 1.5.2
+Version: 1.5.3
 Title: Extension of data.frame for fast subset, fast merge and fast
         grouping.
 Author: Matthew Dowle with many contributions from Tom Short.  See SVN
@@ -13,9 +13,8 @@ Description: Enhanced data.frame. Fast subset, grouping and merge in a
         names directly, for faster development.  Example: X[Y] is a
         fast join for large data.
 License: GPL
-URL: http://datatable.r-forge.r-project.org/
+URL: http://datatable.r-forge.r-project.org/,
+        http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table
+Packaged: 2011-02-11 00:35:36 UTC; mdowle
 Repository: CRAN
-Repository/R-Forge/Project: datatable
-Repository/R-Forge/Revision: 174
-Date/Publication: 2011-01-21 09:03:34
-Packaged: 2011-01-19 21:47:47 UTC; rforge
+Date/Publication: 2011-02-11 08:49:05
