--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,9 @@
 Package: data.table
-Version: 1.6
+Version: 1.6.1
 Title: Extension of data.frame for fast indexing, fast ordered joins
         and fast grouping.
-Author: Matthew Dowle with many contributions from Tom Short.  See SVN
-        logs on R-Forge.
-Maintainer: M Dowle and T Short
-        <datatable-help@lists.r-forge.r-project.org>
+Author: M Dowle, T Short, S Lianoglou
+Maintainer: M Dowle <datatable-help@lists.r-forge.r-project.org>
 Depends: R (>= 2.10.0)
 Imports: methods
 Suggests: chron, ggplot2, testthat (>= 0.4)
@@ -15,7 +13,9 @@ Description: Enhanced data.frame. Fast indexing, fast ordered joins and
         Example: X[Y] is a fast join for large data.
 License: GPL
 URL: http://datatable.r-forge.r-project.org/,
-        http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table
-Packaged: 2011-04-22 07:01:25 UTC; mdowle
+        http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table,
+        http://www.inside-r.org/packages/cran/data.table
+BugReports: https://r-forge.r-project.org/tracker/?group_id=240
+Packaged: 2011-06-28 18:59:59 UTC; mdowle
 Repository: CRAN
-Date/Publication: 2011-04-24 06:07:16
+Date/Publication: 2011-06-29 09:41:44
