--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: data.table
-Version: 1.6.2
+Version: 1.6.3
 Title: Extension of data.frame for fast indexing, fast ordered joins
         and fast grouping.
 Author: M Dowle, T Short, S Lianoglou
 Maintainer: M Dowle <datatable-help@lists.r-forge.r-project.org>
-Depends: R (>= 2.10.0)
+Depends: R (>= 2.12.0)
 Imports: methods
-Suggests: chron, ggplot2, testthat (>= 0.4)
+Suggests: chron, ggplot2, plyr, testthat (>= 0.4)
 Description: Enhanced data.frame. Fast indexing, fast ordered joins and
         fast grouping in a short and flexible syntax. i and j may be
         expressions of column names directly, for faster development.
@@ -16,6 +16,6 @@ URL: http://datatable.r-forge.r-project.org/,
         http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table,
         http://www.inside-r.org/packages/cran/data.table
 BugReports: https://r-forge.r-project.org/tracker/?group_id=240
-Packaged: 2011-06-30 18:17:30 UTC; mdowle
+Packaged: 2011-08-04 01:32:50 UTC; mdowle
 Repository: CRAN
-Date/Publication: 2011-07-02 14:21:54
+Date/Publication: 2011-08-04 11:28:47
