--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,10 @@ useDynLib(data.table)
 
 ## For S4-ization
 import(methods)
-exportClasses(data.table)
+exportClasses(data.table, IDate, ITime)
 ##
 
-export(data.table, tables, setkey, key, "key<-", J, CJ, SJ)
+export(data.table, tables, setkey, key, "key<-", haskey, J, CJ, SJ)
 export(as.data.table,is.data.table,test.data.table,last,like,"%like%",between,"%between%")
 export(timetaken)
 
