--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: data.table
-Version: 1.7.2
+Version: 1.7.3
 Title: Extension of data.frame for fast indexing, fast ordered joins,
         fast assignment, fast grouping and list columns.
 Author: M Dowle, T Short, S Lianoglou
@@ -12,7 +12,8 @@ License: GPL (>= 2)
 URL: http://datatable.r-forge.r-project.org/,
         http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table,
         http://crantastic.org/packages/data.table
-BugReports: https://r-forge.r-project.org/tracker/?group_id=240
-Packaged: 2011-11-07 01:33:17 UTC; mdowle
+BugReports:
+        https://r-forge.r-project.org/tracker/?func=add&group_id=240&atid=975
+Packaged: 2011-11-25 01:19:07 UTC; mdowle
 Repository: CRAN
-Date/Publication: 2011-11-07 14:05:18
+Date/Publication: 2011-11-25 07:12:52
