--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: data.table
-Version: 1.7.7
+Version: 1.7.8
 Title: Extension of data.frame for fast indexing, fast ordered joins,
         fast assignment, fast grouping and list columns.
 Author: M Dowle, T Short, S Lianoglou
@@ -7,13 +7,16 @@ Maintainer: M Dowle <datatable-help@lists.r-forge.r-project.org>
 Depends: R (>= 2.12.0)
 Imports: methods
 Suggests: chron, ggplot2, plyr, testthat (>= 0.4), hexbin
-Description: Enhanced data.frame. Fast indexing, fast ordered joins, fast assignment, fast grouping and list columns in a short and flexible syntax. i and j may be expressions of column names directly, for faster development.  Example: X[Y] is a fast join for large data.
+Description: Enhanced data.frame. Fast indexing, fast ordered joins,
+        fast assignment, fast grouping and list columns in a short and
+        flexible syntax. i and j may be expressions of column names
+        directly, for faster development.  Example: X[Y] is a fast join
+        for large data.
 License: GPL (>= 2)
 URL: http://datatable.r-forge.r-project.org/,
         http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table,
         http://crantastic.org/packages/data.table
-BugReports:
-        https://r-forge.r-project.org/tracker/?func=add&group_id=240&atid=975
-Packaged: 2011-12-15 01:19:31 UTC; mdowle
+BugReports: https://r-forge.r-project.org/tracker/?group_id=240
+Packaged: 2012-01-25 06:04:35 UTC; mdowle
 Repository: CRAN
-Date/Publication: 2011-12-15 10:07:49
+Date/Publication: 2012-01-25 07:53:47
