--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,11 @@ import(methods)
 exportClasses(data.table, IDate, ITime)
 ##
 
-export(data.table, tables, setkey, key, "key<-", haskey, J, CJ, SJ, copy)
+export(data.table, tables, setkey, setkeyv, key, "key<-", haskey, J, CJ, SJ, copy)
 export(as.data.table,is.data.table,test.data.table,last,like,"%like%",between,"%between%")
 export(timetaken)
 export(truelength, alloc.col, ":=")
+export(setattr)
 
 S3method("[", data.table)
 S3method("[<-", data.table)
@@ -21,6 +22,7 @@ S3method(as.data.table, data.frame)
 S3method(as.data.table, matrix)
 S3method(as.data.table, list)
 S3method(as.data.frame, data.table)
+S3method(as.list, data.table)
 S3method(as.matrix, data.table)
 #S3method(cbind, data.table)
 #S3method(rbind, data.table)
