--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: data.table
-Version: 1.7.8
+Version: 1.7.9
 Title: Extension of data.frame for fast indexing, fast ordered joins,
         fast assignment, fast grouping and list columns.
 Author: M Dowle, T Short, S Lianoglou
 Maintainer: M Dowle <datatable-help@lists.r-forge.r-project.org>
 Depends: R (>= 2.12.0)
 Imports: methods
-Suggests: chron, ggplot2, plyr, testthat (>= 0.4), hexbin
+Suggests: chron, ggplot2, plyr, reshape, testthat (>= 0.4), hexbin
 Description: Enhanced data.frame. Fast indexing, fast ordered joins,
         fast assignment, fast grouping and list columns in a short and
         flexible syntax. i and j may be expressions of column names
@@ -17,6 +17,6 @@ URL: http://datatable.r-forge.r-project.org/,
         http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table,
         http://crantastic.org/packages/data.table
 BugReports: https://r-forge.r-project.org/tracker/?group_id=240
-Packaged: 2012-01-25 06:04:35 UTC; mdowle
+Packaged: 2012-01-31 01:30:48 UTC; mdowle
 Repository: CRAN
-Date/Publication: 2012-01-25 07:53:47
+Date/Publication: 2012-01-31 07:30:11
