--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,8 @@ export(data.table, tables, setkey, setkeyv, key, "key<-", haskey, J, CJ, SJ, cop
 export(as.data.table,is.data.table,test.data.table,last,like,"%like%",between,"%between%")
 export(timetaken)
 export(truelength, alloc.col, ":=")
-export(setattr, setnames, setcolorder)
+export(setattr, setnames, setcolorder, set)
+export(chmatch, "%chin%", chorder, chgroup)
 
 S3method("[", data.table)
 S3method("[<-", data.table)
@@ -88,7 +89,6 @@ S3method(split, IDate)
 # getdots
 # NCOL
 # NROW
-# sortedmatch
 # take
 # trim
 # which.first
