--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: data.table
-Version: 1.8.0
+Version: 1.8.2
 Title: Extension of data.frame for fast indexing, fast ordered joins,
         fast assignment, fast grouping and list columns.
 Author: M Dowle, T Short, S Lianoglou
-Maintainer: M Dowle <datatable-help@lists.r-forge.r-project.org>
+Maintainer: M Dowle <mdowle@mdowle.plus.com>
 Depends: R (>= 2.12.0)
 Imports: methods
 Suggests: chron, ggplot2 (>= 0.9.0), plyr, reshape, testthat (>= 0.4),
@@ -14,10 +14,9 @@ Description: Enhanced data.frame. Fast indexing, fast ordered joins,
         directly, for faster development.  Example: X[Y] is a fast join
         for large data.
 License: GPL (>= 2)
-URL: http://datatable.r-forge.r-project.org/,
-        http://rwiki.sciviews.org/doku.php?id=packages:cran:data.table,
-        http://crantastic.org/packages/data.table
+URL: http://datatable.r-forge.r-project.org/
 BugReports: https://r-forge.r-project.org/tracker/?group_id=240
-Packaged: 2012-03-26 00:34:30 UTC; mdowle
+ByteCompile: TRUE
+Packaged: 2012-07-17 07:30:11 UTC; mdowle
 Repository: CRAN
-Date/Publication: 2012-07-16 08:21:33
+Date/Publication: 2012-07-17 19:51:23
