--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,14 @@ import(methods)
 exportClasses(data.table, IDate, ITime)
 ##
 
-export(data.table, tables, setkey, setkeyv, key, "key<-", haskey, J, CJ, SJ, copy)
+export(data.table, tables, setkey, setkeyv, key, "key<-", haskey, CJ, SJ, copy)
 export(as.data.table,is.data.table,test.data.table,last,like,"%like%",between,"%between%")
 export(timetaken)
 export(truelength, alloc.col, ":=")
 export(setattr, setnames, setcolorder, set)
 export(chmatch, "%chin%", chorder, chgroup)
 export(rbindlist)
+export(fread)
 
 S3method("[", data.table)
 S3method("[<-", data.table)
