--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,12 @@ export(data.table, tables, setkey, setkeyv, key, "key<-", haskey, CJ, SJ, copy)
 export(as.data.table,is.data.table,test.data.table,last,like,"%like%",between,"%between%")
 export(timetaken)
 export(truelength, alloc.col, ":=")
-export(setattr, setnames, setcolorder, set)
+export(setattr, setnames, setcolorder, set, setDT)
 export(chmatch, "%chin%", chorder, chgroup)
 export(rbindlist)
 export(fread)
 export(address)
+export(.SD,.N,.I,.GRP,.BY)
 
 S3method("[", data.table)
 S3method("[<-", data.table)
@@ -25,6 +26,14 @@ S3method(as.data.table, data.table)
 S3method(as.data.table, data.frame)
 S3method(as.data.table, matrix)
 S3method(as.data.table, list)
+S3method(as.data.table, integer)
+S3method(as.data.table, numeric)
+S3method(as.data.table, character)
+S3method(as.data.table, logical)
+S3method(as.data.table, factor)
+S3method(as.data.table, ordered)
+S3method(as.data.table, Date)
+S3method(as.data.table, table)
 S3method(as.data.frame, data.table)
 S3method(as.list, data.table)
 S3method(as.matrix, data.table)
@@ -45,6 +54,10 @@ S3method(is.na, data.table)
 S3method(format, data.table)
 S3method(Ops, data.table)
 S3method(all.equal, data.table)
+
+importFrom(reshape2, melt)
+S3method(melt, data.table)
+export(dcast.data.table)
 
 import(utils)
 S3method(tail, data.table)
