--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,20 @@
 Package: data.table
-Version: 1.8.10
-Title: Extension of data.frame for fast indexing, fast ordered joins,
-        fast assignment, fast grouping and list columns.
-Author: M Dowle, T Short, S Lianoglou with contributions from A Srinivasan, R Saporta
-Maintainer: Matthew Dowle <mdowle@mdowle.plus.com>
-Depends: R (>= 2.12.0)
-Imports: methods
+Version: 1.9.2
+Title: Extension of data.frame
+Author: M Dowle, T Short, S Lianoglou, A Srinivasan with contributions from R Saporta, E Antonyan
+Maintainer: Matt Dowle <mdowle@mdowle.plus.com>
+Depends: R (>= 2.14.0)
+Imports: methods, reshape2
 Suggests: chron, ggplot2 (>= 0.9.0), plyr, reshape, testthat (>= 0.4),
         hexbin, fastmatch, nlme, xts, bit64
-Description: Enhanced data.frame. Fast indexing, fast ordered joins, fast assignment by reference, fast grouping and list columns in a short and flexible syntax. i and j may be expressions of column names directly, for faster development.  Example: X[Y] is a fast join for large data.
+Description: Fast aggregation of large data (e.g. 100GB in RAM), fast ordered joins, fast add/modify/delete of columns by group using no copies at all, list columns and a fast file reader (fread). Offers a natural and flexible syntax, for faster development.
 License: GPL (>= 2)
 URL: http://datatable.r-forge.r-project.org/,
         http://stackoverflow.com/questions/tagged/data.table
 BugReports: https://r-forge.r-project.org/tracker/?group_id=240
 MailingList: datatable-help@lists.r-forge.r-project.org
 ByteCompile: TRUE
-Packaged: 2013-09-02 23:44:04 UTC; mdowle
+Packaged: 2014-02-27 11:20:02 UTC; mdowle
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-09-03 06:40:57
+Date/Publication: 2014-02-27 14:48:59
