--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,19 @@
 Package: data.table
-Version: 1.9.2
+Version: 1.9.4
 Title: Extension of data.frame
 Author: M Dowle, T Short, S Lianoglou, A Srinivasan with contributions from R Saporta, E Antonyan
 Maintainer: Matt Dowle <mdowle@mdowle.plus.com>
 Depends: R (>= 2.14.0)
-Imports: methods, reshape2
-Suggests: chron, ggplot2 (>= 0.9.0), plyr, reshape, testthat (>= 0.4),
-        hexbin, fastmatch, nlme, xts, bit64
+Imports: methods, chron, reshape2
+Suggests: ggplot2 (>= 0.9.0), plyr, reshape, testthat (>= 0.4), hexbin,
+        fastmatch, nlme, xts, bit64
 Description: Fast aggregation of large data (e.g. 100GB in RAM), fast ordered joins, fast add/modify/delete of columns by group using no copies at all, list columns and a fast file reader (fread). Offers a natural and flexible syntax, for faster development.
 License: GPL (>= 2)
-URL: http://datatable.r-forge.r-project.org/,
-        http://stackoverflow.com/questions/tagged/data.table
-BugReports: https://r-forge.r-project.org/tracker/?group_id=240
+URL: https://github.com/Rdatatable/data.table/wiki
+BugReports: https://github.com/Rdatatable/data.table/issues
 MailingList: datatable-help@lists.r-forge.r-project.org
 ByteCompile: TRUE
-Packaged: 2014-02-27 11:20:02 UTC; mdowle
+Packaged: 2014-10-02 01:58:23.662 UTC; mdowle
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-02-27 14:48:59
+Date/Publication: 2014-10-02 08:40:58
